--- a/Kontenu/Kontenu/Kontenu.csproj
+++ b/Kontenu/Kontenu/Kontenu.csproj
@@ -192,22 +192,22 @@
     <Compile Include="Akuntansi\Form\Master\FrmAkunSubKategoriAdd.designer.cs">
       <DependentUpon>FrmAkunSubKategoriAdd.cs</DependentUpon>
     </Compile>
-    <Compile Include="Akuntansi\Rpt\RptCetakJurnalVoucher.cs">
+    <Compile Include="Akuntansi\Rpt\Transaksi\RptCetakJurnalVoucher.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Akuntansi\Rpt\RptCetakJurnalVoucher.designer.cs">
+    <Compile Include="Akuntansi\Rpt\Transaksi\RptCetakJurnalVoucher.designer.cs">
       <DependentUpon>RptCetakJurnalVoucher.cs</DependentUpon>
     </Compile>
-    <Compile Include="Akuntansi\Rpt\RptCetakKasKeluar.cs">
+    <Compile Include="Akuntansi\Rpt\Transaksi\RptCetakKasKeluar.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Akuntansi\Rpt\RptCetakKasKeluar.designer.cs">
+    <Compile Include="Akuntansi\Rpt\Transaksi\RptCetakKasKeluar.designer.cs">
       <DependentUpon>RptCetakKasKeluar.cs</DependentUpon>
     </Compile>
-    <Compile Include="Akuntansi\Rpt\RptCetakKasMasuk.cs">
+    <Compile Include="Akuntansi\Rpt\Transaksi\RptCetakKasMasuk.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Akuntansi\Rpt\RptCetakKasMasuk.designer.cs">
+    <Compile Include="Akuntansi\Rpt\Transaksi\RptCetakKasMasuk.designer.cs">
       <DependentUpon>RptCetakKasMasuk.cs</DependentUpon>
     </Compile>
     <Compile Include="Akuntansi\Form\Transaksi\FrmJurnalVoucher.cs">
@@ -261,10 +261,10 @@
     <Compile Include="Design\Data\DataJabatan.cs" />
     <Compile Include="Design\Data\DataPIC.cs" />
     <Compile Include="Design\Data\DataOutsource.cs" />
-    <Compile Include="Design\Rpt\RptQuotation.cs">
+    <Compile Include="Design\Rpt\Transaksi\RptQuotation.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="Design\Rpt\RptQuotation.designer.cs">
+    <Compile Include="Design\Rpt\Transaksi\RptQuotation.designer.cs">
       <DependentUpon>RptQuotation.cs</DependentUpon>
     </Compile>
     <Compile Include="Design\Form\Master\FrmJenisProyek.cs">
@@ -588,13 +588,13 @@
     <EmbeddedResource Include="Akuntansi\Form\Master\FrmAkunSubKategoriAdd.resx">
       <DependentUpon>FrmAkunSubKategoriAdd.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Akuntansi\Rpt\RptCetakJurnalVoucher.resx">
+    <EmbeddedResource Include="Akuntansi\Rpt\Transaksi\RptCetakJurnalVoucher.resx">
       <DependentUpon>RptCetakJurnalVoucher.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Akuntansi\Rpt\RptCetakKasKeluar.resx">
+    <EmbeddedResource Include="Akuntansi\Rpt\Transaksi\RptCetakKasKeluar.resx">
       <DependentUpon>RptCetakKasKeluar.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Akuntansi\Rpt\RptCetakKasMasuk.resx">
+    <EmbeddedResource Include="Akuntansi\Rpt\Transaksi\RptCetakKasMasuk.resx">
       <DependentUpon>RptCetakKasMasuk.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Akuntansi\Form\Transaksi\FrmJurnalVoucher.resx">
@@ -615,7 +615,7 @@
     <EmbeddedResource Include="Akuntansi\Form\Transaksi\FrmKasMasukAdd.resx">
       <DependentUpon>FrmKasMasukAdd.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Design\Rpt\RptQuotation.resx">
+    <EmbeddedResource Include="Design\Rpt\Transaksi\RptQuotation.resx">
       <DependentUpon>RptQuotation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Design\Form\Master\FrmJenisProyek.resx">
