--- a/Kontenu/Kontenu/Kontenu.csproj
+++ b/Kontenu/Kontenu/Kontenu.csproj
@@ -246,6 +246,7 @@
     <Compile Include="Akuntansi\Form\Transaksi\FrmKasMasukAdd.designer.cs">
       <DependentUpon>FrmKasMasukAdd.cs</DependentUpon>
     </Compile>
+    <Compile Include="Design\Data\DataPenerimaan.cs" />
     <Compile Include="Design\Data\DataVInvoiceTotalTerima.cs" />
     <Compile Include="Design\Data\DataPenagihan.cs" />
     <Compile Include="Design\Data\DataInvoice.cs" />
@@ -263,11 +264,23 @@
     <Compile Include="Design\Data\DataJabatan.cs" />
     <Compile Include="Design\Data\DataPIC.cs" />
     <Compile Include="Design\Data\DataOutsource.cs" />
+    <Compile Include="Design\Form\Transaksi\FrmPenerimaan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Design\Form\Transaksi\FrmPenerimaan.designer.cs">
+      <DependentUpon>FrmPenerimaan.cs</DependentUpon>
+    </Compile>
     <Compile Include="Design\Form\Transaksi\FrmPenagihan.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Design\Form\Transaksi\FrmPenagihan.designer.cs">
       <DependentUpon>FrmPenagihan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Design\Form\Transaksi\FrmPenerimaanAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Design\Form\Transaksi\FrmPenerimaanAdd.designer.cs">
+      <DependentUpon>FrmPenerimaanAdd.cs</DependentUpon>
     </Compile>
     <Compile Include="Design\Form\Transaksi\FrmPenagihanAdd.cs">
       <SubType>Form</SubType>
@@ -629,8 +642,14 @@
     <EmbeddedResource Include="Akuntansi\Form\Transaksi\FrmKasMasukAdd.resx">
       <DependentUpon>FrmKasMasukAdd.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Design\Form\Transaksi\FrmPenerimaan.resx">
+      <DependentUpon>FrmPenerimaan.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Design\Form\Transaksi\FrmPenagihan.resx">
       <DependentUpon>FrmPenagihan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Design\Form\Transaksi\FrmPenerimaanAdd.resx">
+      <DependentUpon>FrmPenerimaanAdd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Design\Form\Transaksi\FrmPenagihanAdd.resx">
       <DependentUpon>FrmPenagihanAdd.cs</DependentUpon>
