penerimaan cetak DONE

--- a/Kontenu/Kontenu/Kontenu.csproj
+++ b/Kontenu/Kontenu/Kontenu.csproj
@@ -288,6 +288,12 @@
     <Compile Include="Design\Form\Transaksi\FrmPenagihanAdd.designer.cs">
       <DependentUpon>FrmPenagihanAdd.cs</DependentUpon>
     </Compile>
+    <Compile Include="Design\Rpt\Transaksi\RptPenerimaan.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Design\Rpt\Transaksi\RptPenerimaan.designer.cs">
+      <DependentUpon>RptPenerimaan.cs</DependentUpon>
+    </Compile>
     <Compile Include="Design\Rpt\Transaksi\RptPenagihan.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -659,6 +665,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Design\Form\Transaksi\FrmPenagihanAdd.resx">
       <DependentUpon>FrmPenagihanAdd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Design\Rpt\Transaksi\RptPenerimaan.resx">
+      <DependentUpon>RptPenerimaan.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Design\Rpt\Transaksi\RptPenagihan.resx">
       <DependentUpon>RptPenagihan.cs</DependentUpon>
