--- a/Kontenu/Kontenu/Kontenu.csproj
+++ b/Kontenu/Kontenu/Kontenu.csproj
@@ -264,7 +264,9 @@
     <Compile Include="Akuntansi\Form\Transaksi\FrmKasMasukAdd.designer.cs">
       <DependentUpon>FrmKasMasukAdd.cs</DependentUpon>
     </Compile>
+    <Compile Include="Design\Data\Transaksi\DataPurchasePayment.cs" />
     <Compile Include="Design\Data\Transaksi\DataPurchase.cs" />
+    <Compile Include="Design\Data\Transaksi\DataPurchasePaymentDetail.cs" />
     <Compile Include="Design\Data\Transaksi\DataPurchaseDetail.cs" />
     <Compile Include="Design\Data\Transaksi\DataPenerimaan.cs" />
     <Compile Include="Design\Data\View\DataVInvoiceTotalTerima.cs" />
@@ -284,11 +286,23 @@
     <Compile Include="Design\Data\Master\DataJabatan.cs" />
     <Compile Include="Design\Data\Master\DataPIC.cs" />
     <Compile Include="Design\Data\Master\DataOutsource.cs" />
+    <Compile Include="Design\Form\Transaksi\FrmPurchasePayment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Design\Form\Transaksi\FrmPurchasePayment.designer.cs">
+      <DependentUpon>FrmPurchasePayment.cs</DependentUpon>
+    </Compile>
     <Compile Include="Design\Form\Transaksi\FrmPurchase.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Design\Form\Transaksi\FrmPurchase.designer.cs">
       <DependentUpon>FrmPurchase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Design\Form\Transaksi\FrmPurchasePaymentAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Design\Form\Transaksi\FrmPurchasePaymentAdd.designer.cs">
+      <DependentUpon>FrmPurchasePaymentAdd.cs</DependentUpon>
     </Compile>
     <Compile Include="Design\Form\Transaksi\FrmPurchaseAdd.cs">
       <SubType>Form</SubType>
@@ -698,8 +712,14 @@
     <EmbeddedResource Include="Akuntansi\Form\Transaksi\FrmKasMasukAdd.resx">
       <DependentUpon>FrmKasMasukAdd.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Design\Form\Transaksi\FrmPurchasePayment.resx">
+      <DependentUpon>FrmPurchasePayment.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Design\Form\Transaksi\FrmPurchase.resx">
       <DependentUpon>FrmPurchase.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Design\Form\Transaksi\FrmPurchasePaymentAdd.resx">
+      <DependentUpon>FrmPurchasePaymentAdd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Design\Form\Transaksi\FrmPurchaseAdd.resx">
       <DependentUpon>FrmPurchaseAdd.cs</DependentUpon>
