update server + update input kode quotation
kode data tujuan input manual
kode quotation tambah param tujuan project
update font di cetakan

--- a/Kontenu/Kontenu/Kontenu.csproj
+++ b/Kontenu/Kontenu/Kontenu.csproj
@@ -31,7 +31,7 @@
     <MinimumRequiredVersion>1.0.0.68</MinimumRequiredVersion>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>index.html</WebPage>
-    <ApplicationRevision>9</ApplicationRevision>
+    <ApplicationRevision>10</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -263,19 +263,6 @@
     </Compile>
     <Compile Include="Akuntansi\Form\Transaksi\FrmKasMasukAdd.designer.cs">
       <DependentUpon>FrmKasMasukAdd.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Build\Data\Master\DataKategoriMaterial.cs" />
-    <Compile Include="Build\Form\Master\FrmKategoriMaterial.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Build\Form\Master\FrmKategoriMaterial.designer.cs">
-      <DependentUpon>FrmKategoriMaterial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Build\Form\Master\FrmKategoriMaterialAdd.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Build\Form\Master\FrmKategoriMaterialAdd.designer.cs">
-      <DependentUpon>FrmKategoriMaterialAdd.cs</DependentUpon>
     </Compile>
     <Compile Include="Design\Data\Transaksi\DataFinalisasiProyek.cs" />
     <Compile Include="Design\Data\Transaksi\DataFinalisasiProyekPurchase.cs" />
@@ -740,12 +727,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Akuntansi\Form\Transaksi\FrmKasMasukAdd.resx">
       <DependentUpon>FrmKasMasukAdd.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Build\Form\Master\FrmKategoriMaterial.resx">
-      <DependentUpon>FrmKategoriMaterial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Build\Form\Master\FrmKategoriMaterialAdd.resx">
-      <DependentUpon>FrmKategoriMaterialAdd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Design\Form\Transaksi\FrmFinalisasiProyek.resx">
       <DependentUpon>FrmFinalisasiProyek.cs</DependentUpon>
@@ -3049,9 +3030,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Akuntansi\Form\Laporan\" />
+    <Folder Include="Build\Data\Master\" />
     <Folder Include="Build\Data\Transaksi\" />
     <Folder Include="Build\Data\View\" />
     <Folder Include="Build\Form\Laporan\" />
+    <Folder Include="Build\Form\Master\" />
     <Folder Include="Build\Form\Transaksi\" />
     <Folder Include="Build\Rpt\Transaksi\" />
     <Folder Include="Design\Form\Laporan\" />
